--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~53.0.20",
     "expo-av": "^15.1.7",
     "expo-blur": "~14.1.5",
+    "expo-checkbox": "^4.1.4",
     "expo-constants": "~17.1.7",
     "expo-document-picker": "^13.1.6",
     "expo-font": "~13.3.2",
